src/sass/blocks/header.scss
.header {
  height: 64px;
  background-color: #fff;
  position: fixed;
  padding: 0 5%;
  left: 0;
  width: 100vw;
  z-index: 5;

  &__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100%;
  }

  &__logo {
    padding: 25px 0;
  }

  &__hamburger-btn {
    display: block;
  }

  &__nav {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
    clip: rect(0 0 0 0);
    overflow: hidden;
    top: 50px;
    opacity: 0.5;
    transform: translateY(0);
    transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1), opacity 0.3s cubic-bezier(0.8, 0.17, 0.83, 1);
  }

  &__nav_state_shown {
    position: absolute;
    right: 0;
    clip: auto;
    z-index: 5;
    transform: translateY(15px);
    opacity: 1;
  }
}

@media (min-width: 650px) {
  .header {
    border-bottom: 1px solid #f0f0f0;
    padding: 0;
    height: 92px;
    position: relative;
    z-index: 10;

    &__nav {
      position: static;
      opacity: 1;
      display: block;
      width: 100%;
      height: 100%;
      transform: none;
    }

    &__wrapper {
      justify-content: flex-start;
    }

    &__hamburger-btn {
      display: none;
    }
  }
}

